PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2007, PHP 5.2.1RC3
- Improved proc_open(). Now on Windows it can run external commands not through
  CMD.EXE. (Dmitry)  
- Fixed bug #40036 (empty() does not work correctly with ArrayObject when using
  ARRAY_AS_PROPS). (Ilia)
- Fixed bug #39504 (xmlwriter_write_dtd_entity() creates Attlist tag,
  not entity). (Hannes)

04 Jan 2007, PHP 5.2.1RC2
- Small optimization of the date() function (Matt,Ilia)
- Removed dependency from SHELL32.DLL. (Dmitry)
- Added function stream_socket_shutdown(). It is a wraper for system shutdown()
  function, that shut downs part of a full-duplex connection. (Dmitry)
- Added internal heap protection (Dmitry)
  . memory-limit is always enabled (--enable-memory-limit removed)
  . default value if memory-limit is set to 128M
  . safe unlinking
  . cookies
  . canary protection (debug build only)
  . random generation of cookies and canaries
- Added forward support for 'b' prefix in front of string literals. (Andrei)
- Add three new functions to ext/xmlwriter (Rob, Ilia)
  . xmlwriter_start_dtd_entity()
  . xmlwriter_end_dtd_entity()
  . xmlwriter_write_dtd_entity()
- Fixed incorrect function names on FreeBSD where inet_pton() was named
  __inet_pton() and inet_ntop() was named __inet_ntop(). (Hannes)
- Fixed the validate email filter so that the letter "v" can also be used in
  the user part of the email address. (Derick)
- Fixed bug #40012 (php_date.c doesnt compile on Netware). (gk at gknw dot de,
  Derick)
- Fixed bug #40009 (http_build_query(array()) returns NULL). (Ilia)
- Fixed bug #39984 (redirect response code in header() could be ignored in
  CGI sapi). (Ilia)
- Fixed bug #39971 (pg_insert/pg_update do not allow now() to be used for
  timestamp fields). (Ilia)
- Fixed bug #39952 (zip ignoring --with-libdir on zlib checks) (judas dot
  iscariote at gmail dot com)